# mandelflow

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: deploy.yml  pr.yml
bench/: README.md  predicted_plots.py
common/: schedule.py  store.py  testing.py
docs/: CLOUD_SETUP.md  DESIGN.md  GOTCHAS.md  LOCAL_DEV.md  SCALING.md  WEEKEND_PLAN.md
orchestration/: definitions.py
render/: animation.py  frame.py  gl_context.py  torch_device.py
stages/: README.md  _cli.py
stages/s00_naive/: README.md  compute.py  run.py
stages/s01_numpy/: README.md  compute.py  run.py
stages/s02_numba/: README.md  compute.py  run.py
stages/s03_numba_opt/: README.md  compute.py  run.py
stages/s04_dask_local/: README.md  compute.py  run.py
stages/s05_gpu_torch/: README.md  compute.py  run.py
stages/s06_gpu_shader/: README.md  compute.py  run.py
stages/s07_zoom_local/: README.md  compute.py  run.py
stages/s08_zoom_cloud/: README.md  compute.py  run.py
stages/s08_zoom_cloud/k8s/: compute-pod.yaml
stages/s08_zoom_cloud/terraform/: example.tfvars  main.tf  outputs.tf  storage.tf  variables.tf  vm.tf
stages/s08_zoom_cloud_cpu/: README.md  compute.py  run.py
stages/s08_zoom_cloud_cpu/terraform/: artifact_registry.tf  budget.tf  example.tfvars  firewall.tf  main.tf  outputs.tf  variables.tf  vm.tf
stages/s09_zoom_fanout/: README.md  compute.py  run.py
stages/s09_zoom_fanout/dev/: kind-cluster.yaml
stages/s09_zoom_fanout_cpu/: README.md  compute.py  run.py
stages/s10_zoom_cloud_gpu/: README.md
stages/s11_zoom_fanout_gpu/: README.md  compute.py  run.py
tests/integration/: test_cross_stage_equivalence.py  test_render.py  test_s00_cli.py  test_s01_cli.py  test_s07_zoom_local.py  test_stage_cli.py
(+19 files in other folders)
