[project]
name = "mandelflow"
version = "0.1.0"
description = "A data engineering scaling study using the Mandelbrot set"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "William Nash", email = "william.a.nash92@gmail.com" }]

dependencies = [
    # Core compute
    "numpy>=2.0",
    "numba>=0.61",
    "mpmath>=1.3",                  # high-precision reference orbit (perturbation theory)

    # Data product — Zarr-as-artifact
    "zarr>=3.0",
    "xarray>=2024.10",              # stable Zarr v3 support
    "icechunk>=0.2",
    "gcsfs>=2024.10",               # GCS-backed stores for stage 08

    # Distributed compute
    "dask[distributed]>=2024.10",

    # Orchestration
    "dagster>=1.9",
    "dagster-webserver>=1.9",       # `dagster dev` UI

    # Rendering
    "pillow>=10.4",
    "matplotlib>=3.9",              # bench + comparison plots (SVG output)

    # Read service (tile server)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.4",                   # stage 05
    "moderngl>=5.11",               # stage 06
    "pygame>=2.6",                  # offscreen GL context provider on macOS
]
cloud = [
    "dagster-k8s>=0.25",            # K8s executor for stage 08
    "dagster-gcp>=0.25",            # GCS resources
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "orchestration", "render", "bench", "stages"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["stages", "common", "render"]
